tests/semantic/valid/40_t_add_numbers.hulk
let x:Number = 1 in {
    let y = x + 2 in print(y);
};
