tests/semantic/invalid/36_e_undefined_attribute.hulk
class Point(x:Number) {
    x:Number = x;
}
let p = new Point(1.0) in print(p.y);
